# Zomato--Milestone-AI-Recommendation-project

./: .env.example  .gitignore  README.md  predict.py  pyproject.toml  requirements.txt  test_ingestion.py
docs/: ProblemStatement.txt  architecture.md  context.md  deployment-plan.md  edge-cases.md  implementation-plan.md
frontend/: index.html
frontend/src/: api.js  main.js
src/: config.py
src/api/: __init__.py  main.py  routes.py
src/data/: __init__.py  cache.py  ingestion.py
src/engine/: __init__.py  orchestrator.py
src/filters/: __init__.py  restaurant_filter.py
src/llm/: __init__.py  groq_provider.py  prompt_builder.py
src/models/: __init__.py  enums.py  schemas.py
stitch_zomato_ai_dining_recommender/: DESIGN.md  code.html
